--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,10 +2,27 @@
   position: absolute;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 160%;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index:-1;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#map,
+body,
+html {
+  height: 100%;
+}
+
+/* #plot,
+body,
+html {
+  height: 100%;
+} */
