--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,3 +21,18 @@ html {
   height: 100%;
 }
 
+.legend {
+  padding: 10px;
+  line-height: 18px;
+  color: #555;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.legend i {
+  float: left;
+  width: 18px;
+  height: 18px;
+  margin-right: 8px;
+  opacity: 0.7;
+}
